--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"ip":"Crvstal8100.aternos.me",
 	"port": "25565",
-	"name": "Irfans_Hund",
+	"name": "ChunkLoaderXD",
 	"auto-night-skip":"true"
 }
